--- a/main.scss
+++ b/main.scss
@@ -11,7 +11,9 @@ font-family:Arial,sans-serif;
   display: flex;
   align-items: center;
 }
-
+.next{
+  right: 0;
+}
 
 .product-information{
 .price{
